# hell-yeah

./: .gitignore  README.org  bench.sh  default.nix  meson.build  test.sh  yes.c
src/: buffer.c  fwrite.c  non-buffer.c
